syntax = "proto3";

package model;

message TestEvent {
  string name = 1;
  oneof data {
    Data1 data1 = 2;
    Data2 data2 = 3;
  }
}

message Data1 {
  string name = 1;
  string value = 2;
}

message Data2 {
  int64 id = 1;
  bytes data = 2;
}